specs/blueprints/errors/validation/missing_attribute_value.eno
# Querying an attribute for a required but missing value 

-- input
field:
attribute =
-- input

-- javascript
parse(input).field('field').attribute('attribute').requiredStringValue();
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->attribute('attribute')->requiredStringValue();
-- php

-- python
enolib.parse(input).field('field').attribute('attribute').required_string_value()
-- python

-- ruby
Enolib.parse(input).field('field').attribute('attribute').required_string_value
-- ruby

## ValidationError

-- text
The attribute 'attribute' must contain a value.
-- text

-- snippet
   Line | Content
      1 | field:
 >    2 | attribute =
-- snippet

selection: [1,11] => [1,11]
